--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@primeuix/themes": "^1.2.3",
+    "@types/d3": "^7.4.3",
+    "d3": "^7.9.0",
+    "primeng": "^20.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
