--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@primeuix/themes": "^1.2.3",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
     "primeng": "^20.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
