--- a/angular.json
+++ b/angular.json
@@ -82,6 +82,7 @@
               }
             ],
             "styles": [
+              "node_modules/primeflex/primeflex.css",
               "src/styles.scss"
             ]
           }
