--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,9 @@
             ],
             "styles": [
               "src/styles.scss"
+            ],
+            "scripts": [
+              "./node_modules/leader-line/leader-line.min.js"
             ]
           },
           "configurations": {
