--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@angular/router": "^20.1.0",
     "@primeuix/themes": "^1.2.3",
     "@types/d3": "^7.4.3",
+    "animate.css": "^4.1.1",
     "d3": "^7.9.0",
+    "leader-line": "^1.0.8",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.1",
